--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "com_community",
+  "name": "socket",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "body-parser": "^1.19.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "body-parse": "^0.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "material-ui-icons": "^1.0.0-beta.36",
+    "jquery": "^3.6.0",
     "mysql": "^2.18.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-electron-web-view": "^2.0.1",
     "react-iframe": "^1.8.0",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "3.4.3",
     "react-scroll-to-bottom": "^4.1.0",
-    "socket.io": "^3.1.2",
-    "socket.io-client": "^3.1.2",
-    "web-vitals": "^0.2.4"
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,10 +29,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
